# zsh-tools

./: .editorconfig  .gitignore  .gitmodules  .npmrc  .nvim.lua  .prettierignore  AGENTS.md  ARCHITECTURAL_ISSUE.md  ARCHITECTURE.md  CONDITIONAL_ANALYSIS.md  EXTRACTION_STATUS.md  GRAMMAR_TEST_RESULTS.md  IMPLEMENTATION_ANALYSIS.md  PARSER_FUNCTION_AUDIT.md  PHASE_1_4_COMPLETION.md  PHASE_2_4_1_ARCHITECTURE_SHIFT.md  PHASE_2_4_1_COMPLETION.md  PHASE_2_4_1_DELIVERY_SUMMARY.txt  PHASE_2_4_1_INDEX.md  PHASE_2_4_1_PLANNING_COMPLETE.md  PHASE_2_4_1_QUICK_REFERENCE.md  PHASE_2_4_1_REDESIGN.md  PHASE_2_4_1_REDESIGN_PLAN.md  PHASE_2_4_1_STAGE_1_3_COMPLETION.md  PHASE_2_4_1_STAGE_1_3_REPORT.md  PHASE_2_4_1_STAGE_1_COMPLETION.md  PHASE_2_4_1_STAGE_1_FINAL_SUMMARY.md  PHASE_2_4_1_STAGE_1_HANDOFF.md  PHASE_2_4_1_STAGE_1_SPEC.md  PHASE_2_4_1_STAGE_1_SUMMARY.md  PHASE_2_4_1_STAGE_2_COMPLETION.md  PHASE_2_4_1_STAGE_4_COMPLETION.md  PHASE_2_4_1_STAGE_5_COMPLETION.md  PHASE_2_4_1_STATUS_UPDATE.md  PHASE_3_ANALYSIS_INDEX.md  PHASE_3_CONDITIONAL_ANALYSIS.md  PHASE_3_HELPER_FUNCTION_ANALYSIS.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_VALIDATION_REPORT.md  PLAN.md  (+16 more)
docs/: IMPLEMENTATION-PROGRESS.md  PLAN.md  TOKEN_MAPPING_VERIFICATION.md  python-conventions.md
grammar/: README.md  pyproject.toml
grammar/scripts/: _types.py
tree-sitter-zsh/: .clang-format-ignore  .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  mise.toml  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-zsh/bindings/go/: binding_test.go
tree-sitter-zsh/bindings/node/: binding.cc  binding_test.js  index.js
tree-sitter-zsh/bindings/python/tests/: test_binding.py
tree-sitter-zsh/bindings/rust/: build.rs  lib.rs
tree-sitter-zsh/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-zsh/test/corpus/: simple_command.txt
typings/clang/: __init__.pyi  cindex.pyi
zsh-grammar/: README.md  canonical-grammar-manual.json  canonical-grammar.json  canonical-grammar.schema.json  mise.toml  pyproject.toml
zsh-grammar/src/zsh_grammar/: _types.py  ast_utilities.py  branch_extractor.py  common.py  construct_grammar.py  control_flow.py  enhanced_call_graph.py  extract_raw_syntax.py  extract_relations.py  extract_zsh_raw.py  extraction_filters.py  function_discovery.py  generate_tree_sitter.py  grammar.py  grammar_rules.py  grammar_utils.py  rule_comparison.py  schema.py  semantic_grammar_extractor.py  source_parser.py  token_extractors.py  token_sequence_validators.py  validate.py  validate_extraction.py  validation.py  validation_reporter.py
zsh-grammar/tests/: conftest.py  test_branch_extractor.py  test_data_structures.py  test_enhanced_call_graph.py  test_grammar.py  test_grammar_rules_stage4.py  test_grammar_schema.py  test_stage5_validation.py  test_token_sequence_extraction.py  test_token_sequence_validators.py
