[project]
name = "zsh-tools"
version = "0.0.0"
description = "A collection of tools to help develop Zsh scripts and plugins"
authors = [
  {name = "Bryan Forbes", email = "bryan@reigndropsfall.net"}
]
license = "BSD-3-Clause"
requires-python = ">=3.12,<3.15"
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
  'zsh-grammar'
]

[tool.uv]
package = false

[tool.uv.sources]
zsh-grammar = { workspace = true }

[tool.uv.workspace]
members = ["zsh-grammar"]

[tool.basedpyright]
stubPath = './typings'
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "tree-sitter-zsh/bindings/python/**",
  "tree-sitter-zsh/setup.py"
]

pythonVersion = "3.14"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"
reportImplicitOverride = "error"
enableExperimentalFeatures = true
deprecateTypingAliases = true

enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = "error"
reportPrivateLocalImportUsage = "error"
reportImplicitRelativeImport = "error"
reportImplicitAbstractClass = "error"
reportIncompatibleUnannotatedOverride = "error"
reportInvalidAbstractMethod = "error"

executionEnvironments = [
  { root = "typings", reportImplicitOverride = "none", reportIncompatibleVariableOverride = "none" },
]

[tool.ruff]
extend-exclude = [
  ".venv*",
  "tree-sitter-zsh/bindings/python/**",
  "tree-sitter-zsh/setup.py"
]
line-length = 88
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "ANN", "B", "B9", "BLE", "C", "C4", "C9", "E", "EXE", "F", "FBT", "G",
  "I", "I002", "ISC", "INP", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET",
  "RSE", "S", "SIM", "T10", "T20", "TC", "TID251", "TRY", "UP", "W", "RUF"
]
ignore = ["PLR0913", "PLR2004", "TRY003", "T201"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["ANN401", "E501", "E701", "E741", "F401", "F403", "F405", "F811", "FBT001", "FBT002", "PGH003", "PYI001", "PYI042", "PLC0105", "UP046", "UP047"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_typeshed"]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
