[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-zsh"
description = "Zsh grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "zsh"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Bryan Forbes", email = "bryan@reigndropsfall.net" }]
requires-python = ">=3.10"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/bryanforbes/tree-sitter-zsh"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"

[tool.uv]
package = true

[tool.pyright]
extends = '../pyproject.toml'

[tool.ruff]
extend = "../pyproject.toml"
extend-exclude = ["bindings/python/tree_sitter_zsh/**"]
