[project]
name = "zsh-grammar"
version = "0.0.0"
description = "A collection of tools to help develop Zsh scripts and plugins"
authors = [
  {name = "Bryan Forbes", email = "bryan@reigndropsfall.net"}
]
license = "BSD-3-Clause"
requires-python = ">=3.12,<3.15"
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
    "clang>=20.0.0",
]

[project.scripts]
construct-zsh-grammar = 'zsh_grammar.construct_grammar:main'

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
stubPath = '../typings'
extends = '../pyproject.toml'

[tool.ruff]
extend = "../pyproject.toml"
