[project]
name = "zsh-grammar"
version = "0.0.0"
description = "A collection of tools to help develop Zsh scripts and plugins"
authors = [
  {name = "Bryan Forbes", email = "bryan@reigndropsfall.net"}
]
license = "BSD-3-Clause"
requires-python = ">=3.12,<3.15"
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
  "clang>=20.0.0",
  "jsonschema>=4.25.1",
  "typer>=0.20.0",
  "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.12.0",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
]

[project.scripts]
construct-zsh-grammar = 'zsh_grammar.construct_grammar:main'
validate-json = 'zsh_grammar.validate:main'
generate-tree-sitter = 'zsh_grammar.generate_tree_sitter:main'

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
stubPath = '../typings'
extends = '../pyproject.toml'

[tool.ruff]
extend = "../pyproject.toml"

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "^\\s+pass$",
  "^\\s*if TYPE_CHECKING:",
  "^\\s*\\.\\.\\.\\s*$",
  "@overload",
  "@abstractmethod",
]

[tool.pytest]
minversion = "9.0"
addopts = ["--cov=zsh_grammar", "--cov-branch", "--cov-report=term"]
testpaths = ["tests"]
